exports[`test renders correctly with default type 1`] = `
<span
  className="list-group-item">
  <div
    className="DraftEditor-root">
    <div
      className="DraftEditor-editorContainer">
      <div
        aria-activedescendant={null}
        aria-autocomplete={null}
        aria-describedby={null}
        aria-expanded={null}
        aria-haspopup={null}
        aria-label={undefined}
        aria-owns={null}
        className="public-DraftEditor-content"
        contentEditable={false}
        data-testid={undefined}
        onBeforeInput={[Function]}
        onBlur={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCopy={[Function]}
        onCut={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        onPaste={[Function]}
        onSelect={[Function]}
        role={null}
        spellCheck={false}
        style={
          Object {
            "outline": "none",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
        suppressContentEditableWarning={true}
        tabIndex={undefined}>
        <div
          data-contents="true">
          <div
            className=""
            data-block={true}
            data-editor="123"
            data-offset-key="4bkmd-0-0">
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="4bkmd-0-0">
              <span
                data-offset-key="4bkmd-0-0"
                style={Object {}}>
                <span
                  data-text="true">
                  some rich text
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</span>
`;

exports[`test renders correctly with dice type 1`] = `
<span
  className="list-group-item">
  <div
    className="DraftEditor-root">
    <div
      className="DraftEditor-editorContainer">
      <div
        aria-activedescendant={null}
        aria-autocomplete={null}
        aria-describedby={null}
        aria-expanded={null}
        aria-haspopup={null}
        aria-label={undefined}
        aria-owns={null}
        className="public-DraftEditor-content"
        contentEditable={false}
        data-testid={undefined}
        onBeforeInput={[Function]}
        onBlur={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCopy={[Function]}
        onCut={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        onPaste={[Function]}
        onSelect={[Function]}
        role={null}
        spellCheck={false}
        style={
          Object {
            "outline": "none",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
        suppressContentEditableWarning={true}
        tabIndex={undefined}>
        <div
          data-contents="true">
          <div
            className=""
            data-block={true}
            data-editor="123"
            data-offset-key="4bkmd-0-0">
            <div
              className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
              data-offset-key="4bkmd-0-0">
              <span
                data-offset-key="4bkmd-0-0"
                style={Object {}}>
                <span
                  data-text="true">
                  some rich text
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <span
      className="label label-default">
      Lancer les dés: 
      1D6+0
    </span>
  </div>
</span>
`;
